answers to Python exercises

--- a/lessons/python_advanced/pickle_saving_objects_for_later.ipynb
+++ b/lessons/python_advanced/pickle_saving_objects_for_later.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Version: 3.7.6 (default, Jan  8 2020, 13:42:34) \n",
+      "[Clang 4.0.1 (tags/RELEASE_401/final)] \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(\"Python Version:\", sys.version, '\\n')"
@@ -32,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,18 +59,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CA': [43, 0, 14, 63, 13, 53, 6, 26, 9, 6, 64, 21, 48, 37, 58, 51, 51, 1, 5, 57, 6, 10, 17, 20, 34, 22, 54, 13, 35, 37, 8, 62, 60, 9, 2, 20, 38, 10, 36, 29, 23, 5, 23, 53, 28, 26, 50, 34, 58, 39, 31, 6, 44, 34, 46, 17, 40, 3, 42, 53, 36, 54, 47, 18, 6, 37, 58, 44, 33, 27, 54, 59, 52, 53, 43, 63, 22, 24, 34, 27, 56, 63, 63, 34, 33, 57, 65, 5, 63, 55, 52, 15, 55, 0, 50, 54, 25, 60, 47, 20], 'IL': [48, 63, 15, 41, 23, 51, 8, 13, 25, 62, 5, 57, 1, 18, 34, 62, 40, 56, 10, 32, 30, 22, 27, 48, 29, 10, 11, 12, 37, 2, 39, 23, 18, 27, 54, 28, 1, 22, 3, 36, 37, 51, 2, 31, 3, 15, 36, 51, 12, 52], 'NY': [9, 21, 61, 52, 38, 10, 24, 12, 44, 53, 28, 1, 62, 54, 52, 63, 5, 21, 3, 19, 10, 13, 18, 42, 55, 37, 35, 38, 25, 40, 2, 58, 52, 36, 6, 1, 22, 13, 22, 35, 19, 11, 54, 64, 35, 58, 29, 16, 50, 63, 57, 15, 47, 55, 57, 16, 30, 62, 9, 8, 32, 58, 27, 31, 58, 43, 64, 59, 53, 40, 14, 63, 14, 46, 34, 6, 23, 35, 2, 42, 57, 17, 50, 23, 7, 3, 4, 62, 32, 37], 'WA': [23, 17, 40, 4, 9, 16, 23, 58, 54, 25, 60, 20, 7, 32, 29, 37, 32, 8, 33, 48, 40, 59, 18, 39, 56, 41, 2, 44, 28, 9, 8, 53, 47]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(lots_of_noise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable        Type      Data/Info\n",
+      "-----------------------------------\n",
+      "lots_of_noise   dict      n=4\n",
+      "pickle          module    <module 'pickle' from '/o<...>lib/python3.7/pickle.py'>\n",
+      "random          module    <module 'random' from '/o<...>lib/python3.7/random.py'>\n",
+      "sys             module    <module 'sys' (built-in)>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
@@ -74,10 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "advanced_python_datatypes.ipynb       my_dataframe.pickle\r\n",
+      "deep_and_shallow_copy.ipynb           pickle_saving_objects_for_later.ipynb\r\n",
+      "\u001b[34mdeep_copy_demo\u001b[m\u001b[m                        readme.md\r\n",
+      "instructor_guide_week1_day4.md\r\n"
+     ]
+    }
+   ],
    "source": [
+    "!rm noise.pickle\n",
     "!ls"
    ]
   },
@@ -90,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,9 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "advanced_python_datatypes.ipynb       my_dataframe.pickle\r\n",
+      "deep_and_shallow_copy.ipynb           noise.pickle\r\n",
+      "\u001b[34mdeep_copy_demo\u001b[m\u001b[m                        pickle_saving_objects_for_later.ipynb\r\n",
+      "instructor_guide_week1_day4.md        readme.md\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls"
    ]
@@ -116,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,18 +179,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable   Type              Data/Info\n",
+      "--------------------------------------\n",
+      "pickle     module            <module 'pickle' from '/o<...>lib/python3.7/pickle.py'>\n",
+      "random     module            <module 'random' from '/o<...>lib/python3.7/random.py'>\n",
+      "sys        module            <module 'sys' (built-in)>\n",
+      "to_write   BufferedWriter    <_io.BufferedWriter name='noise.pickle'>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'lots_of_noise' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-69f22b4d5ca8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlots_of_noise\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'lots_of_noise' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(lots_of_noise)"
    ]
@@ -152,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,18 +241,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CA': [43, 0, 14, 63, 13, 53, 6, 26, 9, 6, 64, 21, 48, 37, 58, 51, 51, 1, 5, 57, 6, 10, 17, 20, 34, 22, 54, 13, 35, 37, 8, 62, 60, 9, 2, 20, 38, 10, 36, 29, 23, 5, 23, 53, 28, 26, 50, 34, 58, 39, 31, 6, 44, 34, 46, 17, 40, 3, 42, 53, 36, 54, 47, 18, 6, 37, 58, 44, 33, 27, 54, 59, 52, 53, 43, 63, 22, 24, 34, 27, 56, 63, 63, 34, 33, 57, 65, 5, 63, 55, 52, 15, 55, 0, 50, 54, 25, 60, 47, 20], 'IL': [48, 63, 15, 41, 23, 51, 8, 13, 25, 62, 5, 57, 1, 18, 34, 62, 40, 56, 10, 32, 30, 22, 27, 48, 29, 10, 11, 12, 37, 2, 39, 23, 18, 27, 54, 28, 1, 22, 3, 36, 37, 51, 2, 31, 3, 15, 36, 51, 12, 52], 'NY': [9, 21, 61, 52, 38, 10, 24, 12, 44, 53, 28, 1, 62, 54, 52, 63, 5, 21, 3, 19, 10, 13, 18, 42, 55, 37, 35, 38, 25, 40, 2, 58, 52, 36, 6, 1, 22, 13, 22, 35, 19, 11, 54, 64, 35, 58, 29, 16, 50, 63, 57, 15, 47, 55, 57, 16, 30, 62, 9, 8, 32, 58, 27, 31, 58, 43, 64, 59, 53, 40, 14, 63, 14, 46, 34, 6, 23, 35, 2, 42, 57, 17, 50, 23, 7, 3, 4, 62, 32, 37], 'WA': [23, 17, 40, 4, 9, 16, 23, 58, 54, 25, 60, 20, 7, 32, 29, 37, 32, 8, 33, 48, 40, 59, 18, 39, 56, 41, 2, 44, 28, 9, 8, 53, 47]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_noise)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variable    Type              Data/Info\n",
+      "---------------------------------------\n",
+      "new_noise   dict              n=4\n",
+      "pickle      module            <module 'pickle' from '/o<...>lib/python3.7/pickle.py'>\n",
+      "random      module            <module 'random' from '/o<...>lib/python3.7/random.py'>\n",
+      "read_file   BufferedReader    <_io.BufferedReader name='noise.pickle'>\n",
+      "sys         module            <module 'sys' (built-in)>\n",
+      "to_write    BufferedWriter    <_io.BufferedWriter name='noise.pickle'>\n"
+     ]
+    }
+   ],
    "source": [
     "whos"
    ]
@@ -194,9 +296,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yay</th>\n",
+       "      <th>specific</th>\n",
+       "      <th>column</th>\n",
+       "      <th>names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.739168</td>\n",
+       "      <td>0.996029</td>\n",
+       "      <td>-0.343955</td>\n",
+       "      <td>4.681793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.695210</td>\n",
+       "      <td>5.817403</td>\n",
+       "      <td>0.971962</td>\n",
+       "      <td>-1.929503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-7.736438</td>\n",
+       "      <td>-3.314517</td>\n",
+       "      <td>-6.897223</td>\n",
+       "      <td>-6.278102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.683634</td>\n",
+       "      <td>8.391881</td>\n",
+       "      <td>-7.291486</td>\n",
+       "      <td>5.494223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-6.392525</td>\n",
+       "      <td>-4.149712</td>\n",
+       "      <td>-9.145087</td>\n",
+       "      <td>-8.846277</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Yay  specific    column     names\n",
+       "0  8.739168  0.996029 -0.343955  4.681793\n",
+       "1  6.695210  5.817403  0.971962 -1.929503\n",
+       "2 -7.736438 -3.314517 -6.897223 -6.278102\n",
+       "3  5.683634  8.391881 -7.291486  5.494223\n",
+       "4 -6.392525 -4.149712 -9.145087 -8.846277"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -207,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,9 +400,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-3975f6306adf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del df\n",
     "\n",
@@ -228,9 +423,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yay</th>\n",
+       "      <th>specific</th>\n",
+       "      <th>column</th>\n",
+       "      <th>names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8.739168</td>\n",
+       "      <td>0.996029</td>\n",
+       "      <td>-0.343955</td>\n",
+       "      <td>4.681793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.695210</td>\n",
+       "      <td>5.817403</td>\n",
+       "      <td>0.971962</td>\n",
+       "      <td>-1.929503</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-7.736438</td>\n",
+       "      <td>-3.314517</td>\n",
+       "      <td>-6.897223</td>\n",
+       "      <td>-6.278102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.683634</td>\n",
+       "      <td>8.391881</td>\n",
+       "      <td>-7.291486</td>\n",
+       "      <td>5.494223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-6.392525</td>\n",
+       "      <td>-4.149712</td>\n",
+       "      <td>-9.145087</td>\n",
+       "      <td>-8.846277</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Yay  specific    column     names\n",
+       "0  8.739168  0.996029 -0.343955  4.681793\n",
+       "1  6.695210  5.817403  0.971962 -1.929503\n",
+       "2 -7.736438 -3.314517 -6.897223 -6.278102\n",
+       "3  5.683634  8.391881 -7.291486  5.494223\n",
+       "4 -6.392525 -4.149712 -9.145087 -8.846277"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('my_dataframe.pickle','rb') as read_file:\n",
     "    new_df = pickle.load(read_file)\n",
@@ -264,6 +540,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -274,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
